Closed Bug 217852 Opened 22 years ago Closed 22 years ago

ASSERTION: nsDebugImpl not thread-safe: '_mOwningThread.GetThread() == PR_GetCurrentThread()'

Categories

(Core :: XPCOM, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

Details

Attachments

(1 file)

Steps: run xpcshell and execute: const io=Components.classes["@mozilla.org/network/io-service;1"].getService(Components.interfaces.nsIIOService); url="http://qa.mandrakesoft.com/show_bug.cgi?id=5012" io.newChannelFromURI(io.newURI(url,0,{})).asyncOpen(Components.classes["@mozilla.org/network/async-stream-listener;1"].createInstance(),{}); io.newChannelFromURI(io.newURI(url,0,{})).asyncOpen(Components.classes["@mozilla.org/network/async-stream-listener;1"].createInstance(),{}); quit() Be sure to have the patch which prevents this code from crashing. WARNING: unable to post DNS lookup complete message, file i:/build/mozilla/netwerk/base/src/nsSocketTransport2.cpp, line 1654 * * * * XPCOM shutdown. Access will be denied * * * * +++ JavaScript debuging hooks removed. Getting service on shutdown. Denied. ContractID: @mozilla.org/js/xpc/RuntimeService;1 IID: {dcfbb49c-1dd1-11b2-9f39-935aef484817} ###!!! ASSERTION: nsDebugImpl not thread-safe: '_mOwningThread.GetThread() == PR_GetCurrentThread()', file i:/build/mozi lla/xpcom/base/nsDebugImpl.cpp, line 145 Break: at file i:/build/mozilla/xpcom/base/nsDebugImpl.cpp, line 145
Depends on: 217853
in the end, nsDebugImpl will leak unless something is done about this: - this 0x00b86c20 |+ nsIDebug {...} |+ mRefCnt {2} \+ _mOwningThread {...} nsDebugImpl::Release(nsDebugImpl * const 0x00b86c20) line 145 + 104 bytes NS_ShutdownXPCOM(nsIServiceManager * 0x00000000) line 799 + 26 bytes main(int 0, char * * 0x00b442e4, char * * 0x00b40e00) line 1097 + 8 bytes
Attachment #130671 - Flags: superreview?(dbaron)
Attachment #130671 - Flags: superreview?(dbaron)
Attachment #130671 - Flags: superreview+
Attachment #130671 - Flags: review?(dougt)
Attachment #130671 - Flags: review?(dougt) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: