Bug 217852 ASSERTION: nsDebugImpl not thread-safe: '_mOwningThread.GetThread() == PR_GetCurrentThread()' r=dougt sr=darin